--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,35 @@
-/* You can add global styles to this file, and also import other style files */
+// reset
+@import '../node_modules/reset-css/reset.css';
+
+// angular theme
+@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
+
+// base
+@import "./src/assets/styles/base.scss";
+
+* {
+    font-size: 1rem;
+    line-height: 1.625rem;
+
+    &:focus {
+        outline: 0;
+    }
+}
+
+html, body {
+    @include size(100%, 100%);
+    @include font('small', 400, 'Roboto');
+    text-rendering: optimizeLegibility;
+
+    strong {
+        font-weight: 700;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    button:disabled {
+        cursor: not-allowed;
+    }
+}
