--- a/src/app/modules/dashboard/components/presentation-creator/presentation-creator.component.html
+++ b/src/app/modules/dashboard/components/presentation-creator/presentation-creator.component.html
@@ -1,3 +1,3 @@
-<p>
-  presentation-creator works!
-</p>
+<div class="presentation-container" [ngClass]="(columnsAmount$ | async) ? 'columns' : 'no-slides'">
+    <ng-container ddNoSlidesInPresentation></ng-container>
+</div>
