--- a/src/app/modules/dashboard/components/presentation-creator/presentation-creator.component.scss
+++ b/src/app/modules/dashboard/components/presentation-creator/presentation-creator.component.scss
@@ -1,14 +1,13 @@
 @import "./src/assets/styles/base.scss";
 
 .presentation-container {
+    @include size(100%, 100%);
+
     &.columns {
-        @include flex(flex, flex-start, flex-start, row);
+        @include flex(flex, flex-start, flex-start, column);
     }
     &.no-slides {
         @include flex(flex, center, center, column);
     }
-    @include size(100%, 100%);
-    min-height: 100vh;
-    padding: 15px;
-    box-sizing: border-box;
+
 }
