--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -3,3 +3,5 @@ $border-radius-xs: 5px;
 $border-radius-sm: 10px;
 $border-radius-md: 15px;
 $border-radius-xl: 20px;
+
+$slides-libary-bar-height: 150px;
