--- a/src/app/shared/components/columns-zone/columns-zone.component.scss
+++ b/src/app/shared/components/columns-zone/columns-zone.component.scss
@@ -1,8 +1,19 @@
 @import "./src/assets/styles/base.scss";
 
 .columns-zone-container {
-    @include flex(flex, flex-start, flex-start, row);
     @include size(100%, calc(100% - 150px));
     min-height: calc(100vh - 150px);
     min-width: 100vw;
+
+    &.columns {
+        @include flex(flex, flex-start, flex-start, row);
+    }
+
+    &.no-columns {
+        @include flex(flex, center, center, row);
+    }
+
+    .no-columns-container {
+        @include font('medium');
+    }
 }
