--- a/src/app/modules/dashboard/components/presentation-libary/presentation-libary.component.html
+++ b/src/app/modules/dashboard/components/presentation-libary/presentation-libary.component.html
@@ -1,3 +1,3 @@
-<p>
-  presentation-libary works!
-</p>
+<div class="presentation-libary-container">
+    <dd-no-presentations *ngIf="!(amountOfPresentationsInLibary$ | async)"></dd-no-presentations>
+</div>
