--- a/src/app/shared/components/no-presentations/no-presentations.component.scss
+++ b/src/app/shared/components/no-presentations/no-presentations.component.scss
@@ -1,13 +1,9 @@
 @import "./src/assets/styles/base.scss";
 
-.no-slides-container {
+.no-presentation-container {
     @include flex(flex, center, center, column);
-    @include size(400px, 300px);
+    @include size(225px, 135px);
     border: 1px dotted $secondary;
     border-radius: $border-radius-md;
     cursor: pointer;
-
-    input[type="file"] {
-        display: none;
-    }
 }
