--- a/src/app/shared/components/slides-libary-bar/slides-libary-bar.component.html
+++ b/src/app/shared/components/slides-libary-bar/slides-libary-bar.component.html
@@ -1,4 +1,5 @@
 <div class="slides-libary-container">
-    <div class="caption">Biblioteka użytkownika</div>
+    <div class="caption">Biblioteka użytkownika<mat-icon (click)="clickIntoFileInput()">add</mat-icon></div>
+    <input #fileInputElement (change)="uploadFiles($event)" id="fileUpload" multiple type="file" hidden>
     <dd-slide-thumbnail *ngFor="let slide of (slidesInLibaryEntities$ | async)" [slide]="slide"></dd-slide-thumbnail>
 </div>
