--- a/src/app/shared/components/slides-libary-bar/slides-libary-bar.component.scss
+++ b/src/app/shared/components/slides-libary-bar/slides-libary-bar.component.scss
@@ -12,4 +12,12 @@
         left: 15px;
         top: -30px;
     }
+
+    mat-icon {
+        @include mat-icon-size(25px);
+        position: absolute;
+        left: 165px;
+        top: 0;
+        cursor: pointer;
+    }
 }
