--- a/src/app/shared/components/columns-zone/columns-zone.component.html
+++ b/src/app/shared/components/columns-zone/columns-zone.component.html
@@ -8,7 +8,7 @@
     <ng-container *ngIf="(amountOfPresentationColumns$ | async)">
         <ng-container *ngFor="let column of (columnsEntities$ | async)">
             <dd-column [id]="column.id" [title]="column.title" [slides]="column.slides"></dd-column>
-            <dd-columns-divider></dd-columns-divider>
+            <dd-columns-divider [isDropZone]="true"></dd-columns-divider>
         </ng-container>
     </ng-container>
 </div>
