--- a/src/app/shared/components/column-title/column-title.component.html
+++ b/src/app/shared/components/column-title/column-title.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Wprowadź tytuł sekcji</h1>
+<h1 mat-dialog-title>Wprowadź tytuł nowej sekcji</h1>
 <div mat-dialog-content>
     <mat-form-field>
         <input matInput [(ngModel)]="columnTitle">
