--- a/src/app/shared/components/columns-divider/columns-divider.component.html
+++ b/src/app/shared/components/columns-divider/columns-divider.component.html
@@ -1,1 +1,1 @@
-<div class="column-divider"></div>
+<div class="column-divider" (dragover)="allowDrop($event)" (drop)="dropOnDivider($event)"></div>
