--- a/src/app/shared/components/column/column.component.html
+++ b/src/app/shared/components/column/column.component.html
@@ -1,11 +1,11 @@
-<div class="column-container">
+<div class="column-container" (dragover)="allowDrop($event)" (drop)="onDrop($event)">
     <div class="title-container">
         <mat-form-field>
             <input matInput [(ngModel)]="title" placeholder="Tytuł sekcji">
         </mat-form-field>
     </div>
     <div class="thumbnails-container">
-        <dd-slide-thumbnail *ngFor="let slide of slides" [slide]="slide"></dd-slide-thumbnail>
+        <dd-slide-thumbnail *ngFor="let slide of slides" [slide]="slide" [columnID]="id"></dd-slide-thumbnail>
     </div>
 </div>
 
