--- a/src/app/shared/components/column/column.component.scss
+++ b/src/app/shared/components/column/column.component.scss
@@ -5,6 +5,7 @@
     @include size(200px, 100%);
     min-height: calc(100vh - 180px);
     background: #28a745;
+    z-index: 1;
 
     .title-container {
         width: 100%;
