--- a/src/app/shared/components/slide-thumbnail/slide-thumbnail.component.html
+++ b/src/app/shared/components/slide-thumbnail/slide-thumbnail.component.html
@@ -1,3 +1,3 @@
-<div class="slide-container" *ngIf="slide" (dragstart)="dragStart($event, slide.id)">
+<div class="slide-container" *ngIf="slide" (dragstart)="dragStart($event)" (dragover)="allowDrop($event)" (drop)="onDrop($event)">
     <img [src]="slide.imageData" alt="">
 </div>
