--- a/src/app/shared/components/columns-divider/columns-divider.component.html
+++ b/src/app/shared/components/columns-divider/columns-divider.component.html
@@ -1,1 +1,5 @@
-<div class="column-divider" (dragover)="allowDrop($event)" (drop)="onDropOnDivider($event)"></div>
+<div class="column-divider"
+     [ngClass]="isElementOnDragOver ? 'drag-over' : ''"
+     (dragover)="allowDrop($event)"
+     (dragleave)="onDragLeave()"
+     (drop)="onDropOnDivider($event)"></div>
