--- a/src/app/shared/components/slide-divider/slide-divider.component.scss
+++ b/src/app/shared/components/slide-divider/slide-divider.component.scss
@@ -3,5 +3,8 @@
 .slide-divider {
     @include flex(flex);
     @include size(200px, 20px);
-    background: brown;
+
+    &.drag-over {
+        background: darken($white, 15%);
+    }
 }
