--- a/src/app/shared/components/no-presentations/no-presentations.component.html
+++ b/src/app/shared/components/no-presentations/no-presentations.component.html
@@ -1,4 +1,4 @@
-<div class="no-presentation-container" (click)="addPresentation()">
+<div (click)="addPresentation()" class="no-presentation-container">
     <span>Brak prezentacji w bibliotece</span>
     <span>Kliknij tutaj aby stworzyć</span>
 </div>
