--- a/src/app/shared/components/columns-divider/columns-divider.component.scss
+++ b/src/app/shared/components/columns-divider/columns-divider.component.scss
@@ -4,8 +4,11 @@
     @include flex(flex);
     @include size(30px, 100%);
     min-height: calc(100vh - 180px);
+    transition: width 150ms ease-out;
 
     &.drag-over {
         background: darken($white, 15%);
+        width: 230px;
+        transition: width 150ms ease-in;
     }
 }
