--- a/src/app/shared/components/slide-divider/slide-divider.component.scss
+++ b/src/app/shared/components/slide-divider/slide-divider.component.scss
@@ -3,8 +3,11 @@
 .slide-divider {
     @include flex(flex);
     @include size(200px, 20px);
+    transition: height 150ms ease-out;
 
     &.drag-over {
         background: darken($white, 15%);
+        height: 132px;
+        transition: height 150ms ease-in;
     }
 }
