--- a/src/app/shared/components/column/column.component.scss
+++ b/src/app/shared/components/column/column.component.scss
@@ -7,10 +7,24 @@
     z-index: 1;
 
     .title-container {
+        position: relative;
         width: 100%;
 
         mat-form-field {
             width: 100%;
+        }
+
+        mat-icon {
+            @include mat-icon-size(25px);
+            position: absolute;
+            right: 0;
+            top: 0;
+            z-index: 2;
+
+            &:hover {
+                cursor: pointer;
+                color: $danger;
+            }
         }
     }
 
